--- a/Demos/Demos/SupportingFiles/Property List.plist
+++ b/Demos/Demos/SupportingFiles/Property List.plist
@@ -14,5 +14,11 @@
 		<key>detail</key>
 		<string>摇奖机Demo</string>
 	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string>JSHeaderViewController</string>
+		<key>detail</key>
+		<string>随着滚动顶部视图变化(下拉放大,上拉平移)</string>
+	</dict>
 </array>
 </plist>
