--- a/Demos/Demos/SupportingFiles/Property List.plist
+++ b/Demos/Demos/SupportingFiles/Property List.plist
@@ -74,5 +74,179 @@
 		<key>detail</key>
 		<string>跟随手指移动特效</string>
 	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string>JSKeyboardViewController</string>
+		<key>detail</key>
+		<string>使用TextField和PickerView演示键盘处理</string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>targetControllerClass</key>
+		<string></string>
+		<key>detail</key>
+		<string></string>
+	</dict>
 </array>
 </plist>
