--- a/Demos/Demos/Demos.plist
+++ b/Demos/Demos/Demos.plist
@@ -124,9 +124,9 @@
 			</dict>
 			<dict>
 				<key>targetControllerClass</key>
-				<string></string>
+				<string>JSMapViewController</string>
 				<key>detail</key>
-				<string>地图</string>
+				<string>演示地图使用,实现定位、切换地图类型、放大、缩小和返回定位点</string>
 			</dict>
 			<dict>
 				<key>targetControllerClass</key>
