集成Mob短信验证SDK

--- a/Demos/Demos/Demos.plist
+++ b/Demos/Demos/Demos.plist
@@ -117,9 +117,9 @@
 			</dict>
 			<dict>
 				<key>targetControllerClass</key>
-				<string></string>
+				<string>JSMobViewController</string>
 				<key>detail</key>
-				<string>demo</string>
+				<string>短信验证</string>
 			</dict>
 			<dict>
 				<key>targetControllerClass</key>
