修改plist文件描述

--- a/Demos/Demos/Demos.plist
+++ b/Demos/Demos/Demos.plist
@@ -89,7 +89,7 @@
 				<key>targetControllerClass</key>
 				<string>JSBaseViewController</string>
 				<key>detail</key>
-				<string>模仿网易新闻首页(待更新)</string>
+				<string>模仿网易新闻首页</string>
 			</dict>
 			<dict>
 				<key>targetControllerClass</key>
